--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
-  - "pypy"
-  - "pypy3"
+  - &pypy2 pypy2.7-6.0
+  - &pypy3 pypy3.5-6.0
 script:
   - python tests.py
